Replace deprecated API.